calculate all the values needed for our weighted rating formula

--- a/IMDB-top250-clone/Simple-Recommender.ipynb
+++ b/IMDB-top250-clone/Simple-Recommender.ipynb
@@ -258,6 +258,102 @@
     "# display first 5 movies\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we shall use IMDB's weighted rating formula as our metric(numeric quantity based on which we rank movies)\n",
+    "# check online for formula but we will need;\n",
+    "\n",
+    "#  - no of votes garnered by the movie (v) => vote_count , \n",
+    "#  - min no of votes required for the movie to be in the chart (m) => we will use no of votes garnered by the 80th percentile\n",
+    "#  - mean rating of the movie (R) => vote_average \n",
+    "#  - mean rating of all the movies in our DS (C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculating value of m\n",
+    "# finf no of votes garnered by the 80th percentile movie\n",
+    "m = df['vote_count'].quantile(0.80)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8963, 24)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# According to our result, only 20% of the movies have more than 50 vote therefore our m is 50\n",
+    "# another prerequisite is runtime. we only want movies with more than 45r min but less than 300 min\n",
+    "\n",
+    "q_movies = df[(df['runtime'] >= 45) & (df['runtime'] <= 300)]\n",
+    "\n",
+    "# only consider movies that have ganered more than m votes\n",
+    "q_movies = q_movies[q_movies['vote_count']>= m]\n",
+    "\n",
+    "# check no of movies that made the cut\n",
+    "q_movies.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.618207215133889"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# final value to discover for our formula is C\n",
+    "C = df['vote_average'].mean()\n",
+    "C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
