--- a/IMDB-top250-clone/Simple-Recommender.ipynb
+++ b/IMDB-top250-clone/Simple-Recommender.ipynb
@@ -350,10 +350,339 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define function to compute the IMDB weighted rating for each movie\n",
+    "def weighted_rating (x, m=m, C=C):\n",
+    "    v = x['vote_count']\n",
+    "    R = x['vote_average']\n",
+    "    # compute the weighted score\n",
+    "    return (v/(v+m) * R) + (m/(m+v) * C)\n",
+    "\n",
+    "#  use apply() on our q_movies dataframe to construct a new feature - score\n",
+    "# since calculation is done for every row, we will set the axis to denote row-wise operation\n",
+    "\n",
+    "# compute score using weighted_rating function above\n",
+    "q_movies['score'] = q_movies.apply(weighted_rating, axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>score</th>\n",
+       "      <th>runtime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10309</th>\n",
+       "      <td>Dilwale Dulhania Le Jayenge</td>\n",
+       "      <td>661.0</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>8.855148</td>\n",
+       "      <td>190.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>314</th>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>8358.0</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>8.482863</td>\n",
+       "      <td>142.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>834</th>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>6024.0</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>8.476278</td>\n",
+       "      <td>175.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40251</th>\n",
+       "      <td>Your Name.</td>\n",
+       "      <td>1030.0</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>8.366584</td>\n",
+       "      <td>106.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12481</th>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>12269.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.289115</td>\n",
+       "      <td>152.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2843</th>\n",
+       "      <td>Fight Club</td>\n",
+       "      <td>9678.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.286216</td>\n",
+       "      <td>139.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>Pulp Fiction</td>\n",
+       "      <td>8670.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.284623</td>\n",
+       "      <td>154.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>522</th>\n",
+       "      <td>Schindler's List</td>\n",
+       "      <td>4436.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.270109</td>\n",
+       "      <td>195.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23673</th>\n",
+       "      <td>Whiplash</td>\n",
+       "      <td>4376.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.269704</td>\n",
+       "      <td>105.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5481</th>\n",
+       "      <td>Spirited Away</td>\n",
+       "      <td>3968.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.266628</td>\n",
+       "      <td>125.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2211</th>\n",
+       "      <td>Life Is Beautiful</td>\n",
+       "      <td>3643.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.263691</td>\n",
+       "      <td>116.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1178</th>\n",
+       "      <td>The Godfather: Part II</td>\n",
+       "      <td>3418.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.261335</td>\n",
+       "      <td>200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1152</th>\n",
+       "      <td>One Flew Over the Cuckoo's Nest</td>\n",
+       "      <td>3001.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.256051</td>\n",
+       "      <td>133.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1176</th>\n",
+       "      <td>Psycho</td>\n",
+       "      <td>2405.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.245381</td>\n",
+       "      <td>109.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>351</th>\n",
+       "      <td>Forrest Gump</td>\n",
+       "      <td>8147.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.184252</td>\n",
+       "      <td>142.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1184</th>\n",
+       "      <td>Once Upon a Time in America</td>\n",
+       "      <td>1104.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8.183804</td>\n",
+       "      <td>229.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1154</th>\n",
+       "      <td>The Empire Strikes Back</td>\n",
+       "      <td>5998.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.178656</td>\n",
+       "      <td>124.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18465</th>\n",
+       "      <td>The Intouchables</td>\n",
+       "      <td>5410.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.176357</td>\n",
+       "      <td>112.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>Leon: The Professional</td>\n",
+       "      <td>4293.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.170276</td>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3030</th>\n",
+       "      <td>The Green Mile</td>\n",
+       "      <td>4166.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.169381</td>\n",
+       "      <td>189.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1170</th>\n",
+       "      <td>GoodFellas</td>\n",
+       "      <td>3211.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.160414</td>\n",
+       "      <td>145.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2216</th>\n",
+       "      <td>American History X</td>\n",
+       "      <td>3120.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.159278</td>\n",
+       "      <td>119.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1161</th>\n",
+       "      <td>12 Angry Men</td>\n",
+       "      <td>2130.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.140785</td>\n",
+       "      <td>96.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9698</th>\n",
+       "      <td>Howl's Moving Castle</td>\n",
+       "      <td>2049.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.138499</td>\n",
+       "      <td>119.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2884</th>\n",
+       "      <td>Princess Mononoke</td>\n",
+       "      <td>2041.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8.138264</td>\n",
+       "      <td>134.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 title  vote_count  vote_average     score  \\\n",
+       "10309      Dilwale Dulhania Le Jayenge       661.0           9.1  8.855148   \n",
+       "314           The Shawshank Redemption      8358.0           8.5  8.482863   \n",
+       "834                      The Godfather      6024.0           8.5  8.476278   \n",
+       "40251                       Your Name.      1030.0           8.5  8.366584   \n",
+       "12481                  The Dark Knight     12269.0           8.3  8.289115   \n",
+       "2843                        Fight Club      9678.0           8.3  8.286216   \n",
+       "292                       Pulp Fiction      8670.0           8.3  8.284623   \n",
+       "522                   Schindler's List      4436.0           8.3  8.270109   \n",
+       "23673                         Whiplash      4376.0           8.3  8.269704   \n",
+       "5481                     Spirited Away      3968.0           8.3  8.266628   \n",
+       "2211                 Life Is Beautiful      3643.0           8.3  8.263691   \n",
+       "1178            The Godfather: Part II      3418.0           8.3  8.261335   \n",
+       "1152   One Flew Over the Cuckoo's Nest      3001.0           8.3  8.256051   \n",
+       "1176                            Psycho      2405.0           8.3  8.245381   \n",
+       "351                       Forrest Gump      8147.0           8.2  8.184252   \n",
+       "1184       Once Upon a Time in America      1104.0           8.3  8.183804   \n",
+       "1154           The Empire Strikes Back      5998.0           8.2  8.178656   \n",
+       "18465                 The Intouchables      5410.0           8.2  8.176357   \n",
+       "289             Leon: The Professional      4293.0           8.2  8.170276   \n",
+       "3030                    The Green Mile      4166.0           8.2  8.169381   \n",
+       "1170                        GoodFellas      3211.0           8.2  8.160414   \n",
+       "2216                American History X      3120.0           8.2  8.159278   \n",
+       "1161                      12 Angry Men      2130.0           8.2  8.140785   \n",
+       "9698              Howl's Moving Castle      2049.0           8.2  8.138499   \n",
+       "2884                 Princess Mononoke      2041.0           8.2  8.138264   \n",
+       "\n",
+       "       runtime  \n",
+       "10309    190.0  \n",
+       "314      142.0  \n",
+       "834      175.0  \n",
+       "40251    106.0  \n",
+       "12481    152.0  \n",
+       "2843     139.0  \n",
+       "292      154.0  \n",
+       "522      195.0  \n",
+       "23673    105.0  \n",
+       "5481     125.0  \n",
+       "2211     116.0  \n",
+       "1178     200.0  \n",
+       "1152     133.0  \n",
+       "1176     109.0  \n",
+       "351      142.0  \n",
+       "1184     229.0  \n",
+       "1154     124.0  \n",
+       "18465    112.0  \n",
+       "289      110.0  \n",
+       "3030     189.0  \n",
+       "1170     145.0  \n",
+       "2216     119.0  \n",
+       "1161      96.0  \n",
+       "9698     119.0  \n",
+       "2884     134.0  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sort df on basis of score\n",
+    "q_movies = q_movies.sort_values('score', ascending=False)\n",
+    "\n",
+    "# print the top 25 movies\n",
+    "q_movies[['title', 'vote_count', 'vote_average', 'score', 'runtime']].head(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Would you look at that!! our first recommender system!"
+   ]
   }
  ],
  "metadata": {
