--- a/IMDB-top250-clone/Knowledge-Recommender.ipynb
+++ b/IMDB-top250-clone/Knowledge-Recommender.ipynb
@@ -159,6 +159,143 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2413.0</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>[{'id': 10749, 'name': 'Romance'}, {'id': 35, ...</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>[{'id': 35, 'name': 'Comedy'}]</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         title  \\\n",
+       "0                    Toy Story   \n",
+       "1                      Jumanji   \n",
+       "2             Grumpier Old Men   \n",
+       "3            Waiting to Exhale   \n",
+       "4  Father of the Bride Part II   \n",
+       "\n",
+       "                                              genres  runtime  vote_average  \\\n",
+       "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...     81.0           7.7   \n",
+       "1  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...    104.0           6.9   \n",
+       "2  [{'id': 10749, 'name': 'Romance'}, {'id': 35, ...    101.0           6.5   \n",
+       "3  [{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...    127.0           6.1   \n",
+       "4                     [{'id': 35, 'name': 'Comedy'}]    106.0           5.7   \n",
+       "\n",
+       "   vote_count  year  \n",
+       "0      5415.0  1995  \n",
+       "1      2413.0  1995  \n",
+       "2        92.0  1995  \n",
+       "3        34.0  1995  \n",
+       "4       173.0  1995  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert release_date into pandas datetime format\n",
+    "df['release_date'] = pd.to_datetime(df['release_date'], errors = 'coerce')\n",
+    "\n",
+    "# extract year from the datetime\n",
+    "df['year'] = df['release_date'].apply(lambda x: str(x).split('-')[0] if x != np.nan else np.nan)\n",
+    "\n",
+    "# transform year from an object(NaT) to int(0)\n",
+    "# helper function to convert NaT to 0 and all other years to integers\n",
+    "def convert_int(x):\n",
+    "    try:\n",
+    "        return int (x)\n",
+    "    except: \n",
+    "        return 0\n",
+    "    \n",
+    "# Apply convert_int to the year feature\n",
+    "df['year'] = df['year'].apply(convert_int)\n",
+    "\n",
+    "# drop the release_date column\n",
+    "df = df.drop('release_date', axis = 1)\n",
+    "\n",
+    "# display dataframe\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
