--- a/IMDB-top250-clone/Knowledge-Recommender.ipynb
+++ b/IMDB-top250-clone/Knowledge-Recommender.ipynb
@@ -296,6 +296,286 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"[{'id': 16, 'name': 'Animation'}, {'id': 35, 'name': 'Comedy'}, {'id': 10751, 'name': 'Family'}]\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print genres of the first movie \n",
+    "df.iloc[0]['genres']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we need to transform the stringified dictionary into native py dictionary. We'll use literal_eval\n",
+    "\n",
+    "from ast import literal_eval\n",
+    "a = '[1,2,3]'\n",
+    "print (type(a)) \n",
+    "b = literal_eval(a)\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>[Animation, Comedy, Family]</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>[Adventure, Fantasy, Family]</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2413.0</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>[Romance, Comedy]</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>[Comedy, Drama, Romance]</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>[Comedy]</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>1995</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         title                        genres  runtime  \\\n",
+       "0                    Toy Story   [Animation, Comedy, Family]     81.0   \n",
+       "1                      Jumanji  [Adventure, Fantasy, Family]    104.0   \n",
+       "2             Grumpier Old Men             [Romance, Comedy]    101.0   \n",
+       "3            Waiting to Exhale      [Comedy, Drama, Romance]    127.0   \n",
+       "4  Father of the Bride Part II                      [Comedy]    106.0   \n",
+       "\n",
+       "   vote_average  vote_count  year  \n",
+       "0           7.7      5415.0  1995  \n",
+       "1           6.9      2413.0  1995  \n",
+       "2           6.5        92.0  1995  \n",
+       "3           6.1        34.0  1995  \n",
+       "4           5.7       173.0  1995  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert all NaN into stringified empty lists\n",
+    "df['genres'] = df['genres'].fillna('[]')\n",
+    "\n",
+    "# apply literal_eval to convert to the list object\n",
+    "df['genres'] = df['genres'].apply(literal_eval)\n",
+    "# convert list of dictionaries to a list of strings\n",
+    "df['genres'] = df['genres'].apply(lambda x: [i['name'] for i in x] if isinstance (x, list) else [])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_21300\\133495804.py:4: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  pd.Series(x['genres']), axis = 1).stack().reset_index(level = 1, drop =True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>year</th>\n",
+       "      <th>genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Animation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Comedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Family</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2413.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Adventure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2413.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Fantasy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       title  runtime  vote_average  vote_count  year      genre\n",
+       "0  Toy Story     81.0           7.7      5415.0  1995  Animation\n",
+       "0  Toy Story     81.0           7.7      5415.0  1995     Comedy\n",
+       "0  Toy Story     81.0           7.7      5415.0  1995     Family\n",
+       "1    Jumanji    104.0           6.9      2413.0  1995  Adventure\n",
+       "1    Jumanji    104.0           6.9      2413.0  1995    Fantasy"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if a particular movie has multiple genres, we will create multiple copies of the movie, with each movie having one of the genres this is called exploding the genres\n",
+    "#  create a new feature by exploding genres\n",
+    "s = df.apply(lambda x:\n",
+    "    pd.Series(x['genres']), axis = 1).stack().reset_index(level = 1, drop =True)\n",
+    "s.name = 'genre'\n",
+    "\n",
+    "#Create a new dataframe gen_df which by dropping the old 'genres' feature and adding the new genre\n",
+    "gen_df = df.drop('genres', axis=1).join(s)\n",
+    "\n",
+    "gen_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
