create our recommender function

--- a/IMDB-top250-clone/Knowledge-Recommender.ipynb
+++ b/IMDB-top250-clone/Knowledge-Recommender.ipynb
@@ -579,6 +579,61 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# What we will need for our recommender function (The build_chart function)\n",
+    "# - user input on their preference\n",
+    "# - extract movies that match the conditions set by the user\n",
+    "# - calculate the values of m and c for the extracted movies and proceed to build the chart as in the previous section\n",
+    " \n",
+    "def build_chart(gen_df, percentile = o.8):\n",
+    "    # Ask for preferred genres\n",
+    "    print ('Input preferred genre')\n",
+    "    genre = input()\n",
+    "    \n",
+    "    # Ask for the lower limit of duration\n",
+    "    print ('Input shortest duration')\n",
+    "    low_time = int(input())\n",
+    "    \n",
+    "    # Ask for upper limit of duration\n",
+    "    print ('Input longest duration')\n",
+    "    high_time = int(input())\n",
+    "    \n",
+    "    # Ask for lower limit of timeline\n",
+    "    print('Input earliest year')\n",
+    "    low_year = int(input())\n",
+    "    \n",
+    "    # upper limit of timeline\n",
+    "    print('Input latest year')\n",
+    "    high_year = int(input())\n",
+    "    \n",
+    "    # Define a new movies variable to store the preferred movies. Copy the contents of gen_df to movies\n",
+    "    movies = gen_df.copy()\n",
+    "    # filter based on the condition\n",
+    "    movies =movies[(movies['genre'] == genre) &\n",
+    "                   (movies['runtime'] >= low_time) &\n",
+    "                   (movies{'runtime'} <= high_time) &\n",
+    "                   (movies['year'] >= low_year) &\n",
+    "                   (movies['year'] <= high_year)]\n",
+    "    # compute the value of C and m for the filtered movies\n",
+    "    C = movies['vote_average'].mean()\n",
+    "    m = movies['vote_count'].quantile(percentile)\n",
+    "    \n",
+    "    # Only consider movies that have higher than m votes. Save this is in a nes df q_movies\n",
+    "    q_movies = movies.copy().loc[movies['vote_count'] >= m]\n",
+    "    # calculate score using the IMDB formula\n",
+    "    q_movies['score'] = q_movies.apply(lambda x: \n",
+    "        (x['vote_count']/ (x['vote_average'] + m) * x['vote_average']) + (m/(m+x['vote_count']) * C), axis = 1)\n",
+    "    \n",
+    "    # Sort movies in descending order of their scores\n",
+    "    q_movies = q_movies.sort_values('score', ascending = False)\n",
+    "    return q_movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
