put model in action

--- a/IMDB-top250-clone/Knowledge-Recommender.ipynb
+++ b/IMDB-top250-clone/Knowledge-Recommender.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_21300\\3542689007.py:4: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_24040\\3542689007.py:4: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('../data/movies_metadata.csv')\n"
      ]
     },
@@ -25,7 +25,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "4           5.7       173.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "4       173.0  1995  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "\"[{'id': 16, 'name': 'Animation'}, {'id': 35, 'name': 'Comedy'}, {'id': 10751, 'name': 'Family'}]\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_21300\\133495804.py:4: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_24040\\133495804.py:4: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
       "  pd.Series(x['genres']), axis = 1).stack().reset_index(level = 1, drop =True)\n"
      ]
     },
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,8 +584,7 @@
     "# - user input on their preference\n",
     "# - extract movies that match the conditions set by the user\n",
     "# - calculate the values of m and c for the extracted movies and proceed to build the chart as in the previous section\n",
-    " \n",
-    "def build_chart(gen_df, percentile = o.8):\n",
+    "def build_chart(gen_df, percentile = 0.8):\n",
     "    # Ask for preferred genres\n",
     "    print ('Input preferred genre')\n",
     "    genre = input()\n",
@@ -611,7 +610,7 @@
     "    # filter based on the condition\n",
     "    movies =movies[(movies['genre'] == genre) &\n",
     "                   (movies['runtime'] >= low_time) &\n",
-    "                   (movies{'runtime'} <= high_time) &\n",
+    "                   (movies['runtime'] <= high_time) &\n",
     "                   (movies['year'] >= low_year) &\n",
     "                   (movies['year'] <= high_year)]\n",
     "    # compute the value of C and m for the filtered movies\n",
@@ -621,9 +620,9 @@
     "    # Only consider movies that have higher than m votes. Save this is in a nes df q_movies\n",
     "    q_movies = movies.copy().loc[movies['vote_count'] >= m]\n",
     "    # calculate score using the IMDB formula\n",
-    "    q_movies['score'] = q_movies.apply(lambda x: \n",
-    "        (x['vote_count']/ (x['vote_average'] + m) * x['vote_average']) + (m/(m+x['vote_count']) * C), axis = 1)\n",
-    "    \n",
+    "    q_movies['score'] = q_movies.apply(lambda x: (x['vote_count']/(x['vote_count']+m) * x['vote_average']) \n",
+    "                                       + (m/(m+x['vote_count']) * C)\n",
+    "                                       ,axis=1)\n",
     "    # Sort movies in descending order of their scores\n",
     "    q_movies = q_movies.sort_values('score', ascending = False)\n",
     "    return q_movies"
@@ -631,10 +630,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input preferred genre\n",
+      "Input shortest duration\n",
+      "Input longest duration\n",
+      "Input earliest year\n",
+      "Input latest year\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>year</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10309</th>\n",
+       "      <td>Dilwale Dulhania Le Jayenge</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>661.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>8.610255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2211</th>\n",
+       "      <td>Life Is Beautiful</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>3643.0</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>8.222940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>351</th>\n",
+       "      <td>Forrest Gump</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>8147.0</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>8.166313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1604</th>\n",
+       "      <td>The Truman Show</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>4702.0</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>7.751427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4843</th>\n",
+       "      <td>Amélie</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>3403.0</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>7.733471</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             title  runtime  vote_average  vote_count  year  \\\n",
+       "10309  Dilwale Dulhania Le Jayenge    190.0           9.1       661.0  1995   \n",
+       "2211             Life Is Beautiful    116.0           8.3      3643.0  1997   \n",
+       "351                   Forrest Gump    142.0           8.2      8147.0  1994   \n",
+       "1604               The Truman Show    103.0           7.8      4702.0  1998   \n",
+       "4843                        Amélie    122.0           7.8      3403.0  2001   \n",
+       "\n",
+       "        genre     score  \n",
+       "10309  Comedy  8.610255  \n",
+       "2211   Comedy  8.222940  \n",
+       "351    Comedy  8.166313  \n",
+       "1604   Comedy  7.751427  \n",
+       "4843   Comedy  7.733471  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lets get recommendations for animated movies between 30 min and 2hrs in length, and released anywhere between 1990 and 2005\n",
+    "# generate the chart for top comedy movies and display top 5\n",
+    "build_chart(gen_df).head()\n"
+   ]
   }
  ],
  "metadata": {
