save cleaned data into our data folder

--- a/IMDB-top250-clone/Knowledge-Recommender.ipynb
+++ b/IMDB-top250-clone/Knowledge-Recommender.ipynb
@@ -755,6 +755,25 @@
     "# generate the chart for top comedy movies and display top 5\n",
     "build_chart(gen_df).head()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the cleaned (non-exploaded) dataframe df into a csv file and save it in the data folder\n",
+    "# set parameter index info False as the index of the Dataframe has no inherent meaning\n",
+    "\n",
+    "df.to_csv('../data/metadata_clean.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
