--- a/Content-Based-Recommenders/Content-Based.ipynb
+++ b/Content-Based-Recommenders/Content-Based.ipynb
@@ -120,6 +120,162 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Our plot description-based recommender will take in a movie title as an argument and output a list of movies that are most similar based on their plots\n",
+    "# STEPS\n",
+    "# - Obtain required data\n",
+    "# - Create TF-IDF vectors (weight of a word in a document is greater if it occurs more frequently in that document and is present in fewer documents) for plot description\n",
+    "# - Compute the pairwise cosine similarity score of every movie (The higher the cosine score, the more similar the documents are to each other)\n",
+    "# Write the recommender function that takes in a movie title as an argument and outputs movies most similar to it based on the plot\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>year</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>['Animation', 'Comedy', 'Family']</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
+       "      <td>862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>['Adventure', 'Fantasy', 'Family']</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2413.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
+       "      <td>8844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>['Romance', 'Comedy']</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>A family wedding reignites the ancient feud be...</td>\n",
+       "      <td>15602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>['Comedy', 'Drama', 'Romance']</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Cheated on, mistreated and stepped on, the wom...</td>\n",
+       "      <td>31357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>['Comedy']</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Just when George Banks has recovered from his ...</td>\n",
+       "      <td>11862</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         title                              genres  runtime  \\\n",
+       "0                    Toy Story   ['Animation', 'Comedy', 'Family']     81.0   \n",
+       "1                      Jumanji  ['Adventure', 'Fantasy', 'Family']    104.0   \n",
+       "2             Grumpier Old Men               ['Romance', 'Comedy']    101.0   \n",
+       "3            Waiting to Exhale      ['Comedy', 'Drama', 'Romance']    127.0   \n",
+       "4  Father of the Bride Part II                          ['Comedy']    106.0   \n",
+       "\n",
+       "   vote_average  vote_count  year  \\\n",
+       "0           7.7      5415.0  1995   \n",
+       "1           6.9      2413.0  1995   \n",
+       "2           6.5        92.0  1995   \n",
+       "3           6.1        34.0  1995   \n",
+       "4           5.7       173.0  1995   \n",
+       "\n",
+       "                                            overview     id  \n",
+       "0  Led by Woody, Andy's toys live happily in his ...    862  \n",
+       "1  When siblings Judy and Peter discover an encha...   8844  \n",
+       "2  A family wedding reignites the ancient feud be...  15602  \n",
+       "3  Cheated on, mistreated and stepped on, the wom...  31357  \n",
+       "4  Just when George Banks has recovered from his ...  11862  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Preparing the data\n",
+    "# import the original data\n",
+    "orig_df = pd.read_csv('../data/movies_metadata.csv', low_memory=False)\n",
+    "\n",
+    "# add the useful features into the cleaned df\n",
+    "df['overview'], df['id'] = orig_df['overview'], orig_df['id']\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
