create TF-IDF matrix

--- a/Content-Based-Recommenders/Content-Based.ipynb
+++ b/Content-Based-Recommenders/Content-Based.ipynb
@@ -272,6 +272,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(45466, 75827)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating tf-idf matrix\n",
+    "# Import TfIdfVectorizer from the scikit-learn library\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "# Define a TF-IDF vectorizer object. remove all the english stop words(common words like this, it, the,that etc)\n",
+    "tfidf = TfidfVectorizer(stop_words='english')\n",
+    "\n",
+    "# replace NaN with an emoty string\n",
+    "df['overview'] = df['overview'].fillna('')\n",
+    "\n",
+    "# construct the required TF-IDF matrix by applying the fit_transformation method on the overview feature\n",
+    "tfidf_matrix = tfidf.fit_transform(df['overview'])\n",
+    "\n",
+    "# output the shape of the tfidf_matrix.shape\n",
+    "tfidf_matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
