change steps cells to markdown

--- a/Content-Based-Recommenders/Content-Based.ipynb
+++ b/Content-Based-Recommenders/Content-Based.ipynb
@@ -122,17 +122,16 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Our plot description-based recommender will take in a movie title as an argument and output a list of movies that are most similar based on their plots\n",
-    "# STEPS\n",
-    "# - Obtain required data\n",
-    "# - Create TF-IDF vectors (weight of a word in a document is greater if it occurs more frequently in that document and is present in fewer documents) for plot description\n",
-    "# - Compute the pairwise cosine similarity score of every movie (The higher the cosine score, the more similar the documents are to each other)\n",
-    "# Write the recommender function that takes in a movie title as an argument and outputs movies most similar to it based on the plot\n"
+    " Our plot description-based recommender will take in a movie title as an argument and output a list of movies that are most similar based on their plots\n",
+    "#### STEPS\n",
+    " - Obtain required data\n",
+    " - Create TF-IDF vectors (weight of a word in a document is greater if it occurs more frequently in that document and is present in fewer documents) for plot description\n",
+    " - Compute the pairwise cosine similarity score of every movie (The higher the cosine score, the more similar the documents are to each other)\n",
+    " - Write the recommender function that takes in a movie title as an argument and outputs movies most similar to it based on the plot\n"
    ]
   },
   {
@@ -320,9 +319,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Building the recommender function\n",
+    "# construct a reverse mapping of indices and movie titles and drop duplicate title if any\n",
+    "indices = pd.Series(df.index, index=df['title']).drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
