--- a/IMDB-top250-clone/Simple-Recommender.ipynb
+++ b/IMDB-top250-clone/Simple-Recommender.ipynb
@@ -260,18 +260,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# we shall use IMDB's weighted rating formula as our metric(numeric quantity based on which we rank movies)\n",
-    "# check online for formula but we will need;\n",
+    " we shall use IMDB's weighted rating formula as our metric(numeric quantity based on which we rank movies)\n",
     "\n",
-    "#  - no of votes garnered by the movie (v) => vote_count , \n",
-    "#  - min no of votes required for the movie to be in the chart (m) => we will use no of votes garnered by the 80th percentile\n",
-    "#  - mean rating of the movie (R) => vote_average \n",
-    "#  - mean rating of all the movies in our DS (C)"
+    "### check online for formula but we will need;\n",
+    "  - no of votes garnered by the movie (v) => vote_count , \n",
+    "  - min no of votes required for the movie to be in the chart (m) => we will use no of votes garnered by the 80th percentile\n",
+    "  - mean rating of the movie (R) => vote_average \n",
+    "  - mean rating of all the movies in our DS (C)"
    ]
   },
   {
@@ -676,12 +675,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Would you look at that!! our first recommender system!"
+    " Would you look at that!! our first recommender system!"
    ]
   }
  ],
@@ -701,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
