--- a/Content-Based-Recommenders/Content-Based.ipynb
+++ b/Content-Based-Recommenders/Content-Based.ipynb
@@ -329,9 +329,115 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Steps to build our recommender function\n",
+    " - Declare the title of the movie as an argument\n",
+    " - Obtain movie index from indices reverse mapping\n",
+    " - Get the list of cosine similarity scores using cosine_sim. Convert this into a list of tuples where the first element is the position and the second is the similarity score\n",
+    " - Sort this list of tuples on the basis of the cosine similarity scores\n",
+    " - Get the top 10 elements of this list. Ignore the first element as it is the movie itself\n",
+    " - Return the titles corresponding to the indices of the top 10 elements excluding the first"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function that takes in movie title as input and gives recommendations\n",
+    "def content_recommender(title, cosine_sim=cosine_sim, df=df, indices=indices):\n",
+    "    # Obtain the index of the movie that matches the title\n",
+    "    idx = indices[title]\n",
+    "    \n",
+    "    # Get the pairwise similarity score of all movies with that movie\n",
+    "    # and convert it into a list of tuples\n",
+    "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
+    "    \n",
+    "    # Sort the movies based on the cosine similarity scores\n",
+    "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    # Get the movies indices\n",
+    "    movies_indices = [i[0] for i in sim_scores]\n",
+    "    \n",
+    "    # Return the top 10 most similar movies\n",
+    "    return df['title'].iloc[movies_indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "359                                    The Lion King\n",
+       "34682    How the Lion Cub and the Turtle Sang a Song\n",
+       "9353                                The Lion King 1½\n",
+       "9115                  The Lion King 2: Simba's Pride\n",
+       "42829                                           Prey\n",
+       "                            ...                     \n",
+       "45461                                         Subdue\n",
+       "45462                            Century of Birthing\n",
+       "45463                                       Betrayal\n",
+       "45464                               Satan Triumphant\n",
+       "45465                                       Queerama\n",
+       "Name: title, Length: 45466, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# recommendations for the lion king\n",
+    "content_recommender('The Lion King')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                     Toy Story\n",
+       "15348               Toy Story 3\n",
+       "2997                Toy Story 2\n",
+       "10301    The 40 Year Old Virgin\n",
+       "24523                 Small Fry\n",
+       "                  ...          \n",
+       "45460                Robin Hood\n",
+       "45461                    Subdue\n",
+       "45462       Century of Birthing\n",
+       "45463                  Betrayal\n",
+       "45465                  Queerama\n",
+       "Name: title, Length: 45466, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# recommendations for Toy Story\n",
+    "content_recommender('Toy Story')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There we go!! First content-based recommender🥳"
+   ]
   }
  ],
  "metadata": {
