add data folder to gitignore

--- a/Content-Based-Recommenders/Content-Based.ipynb
+++ b/Content-Based-Recommenders/Content-Based.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "4  Just when George Banks has recovered from his ...  11862  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "(45466, 75827)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "Name: title, Length: 45466, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "Name: title, Length: 45466, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,6 +438,201 @@
    "source": [
     "There we go!! First content-based recommender🥳"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metadata-based recommender\n",
+    "\n",
+    "We will use the following metadata\n",
+    " - The genre\n",
+    " - The director\n",
+    " - The 3 main characters\n",
+    " - Sub-genres/keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cast</th>\n",
+       "      <th>crew</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[{'cast_id': 14, 'character': 'Woody (voice)',...</td>\n",
+       "      <td>[{'credit_id': '52fe4284c3a36847f8024f49', 'de...</td>\n",
+       "      <td>862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[{'cast_id': 1, 'character': 'Alan Parrish', '...</td>\n",
+       "      <td>[{'credit_id': '52fe44bfc3a36847f80a7cd1', 'de...</td>\n",
+       "      <td>8844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[{'cast_id': 2, 'character': 'Max Goldman', 'c...</td>\n",
+       "      <td>[{'credit_id': '52fe466a9251416c75077a89', 'de...</td>\n",
+       "      <td>15602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[{'cast_id': 1, 'character': \"Savannah 'Vannah...</td>\n",
+       "      <td>[{'credit_id': '52fe44779251416c91011acb', 'de...</td>\n",
+       "      <td>31357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[{'cast_id': 1, 'character': 'George Banks', '...</td>\n",
+       "      <td>[{'credit_id': '52fe44959251416c75039ed7', 'de...</td>\n",
+       "      <td>11862</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                cast  \\\n",
+       "0  [{'cast_id': 14, 'character': 'Woody (voice)',...   \n",
+       "1  [{'cast_id': 1, 'character': 'Alan Parrish', '...   \n",
+       "2  [{'cast_id': 2, 'character': 'Max Goldman', 'c...   \n",
+       "3  [{'cast_id': 1, 'character': \"Savannah 'Vannah...   \n",
+       "4  [{'cast_id': 1, 'character': 'George Banks', '...   \n",
+       "\n",
+       "                                                crew     id  \n",
+       "0  [{'credit_id': '52fe4284c3a36847f8024f49', 'de...    862  \n",
+       "1  [{'credit_id': '52fe44bfc3a36847f80a7cd1', 'de...   8844  \n",
+       "2  [{'credit_id': '52fe466a9251416c75077a89', 'de...  15602  \n",
+       "3  [{'credit_id': '52fe44779251416c91011acb', 'de...  31357  \n",
+       "4  [{'credit_id': '52fe44959251416c75039ed7', 'de...  11862  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load the keyword and credits files\n",
+    "cred_df = pd.read_csv('../data/credits.csv')\n",
+    "key_df = pd.read_csv('../data/keywords.csv')\n",
+    "\n",
+    "cred_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>keywords</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>862</td>\n",
+       "      <td>[{'id': 931, 'name': 'jealousy'}, {'id': 4290,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8844</td>\n",
+       "      <td>[{'id': 10090, 'name': 'board game'}, {'id': 1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15602</td>\n",
+       "      <td>[{'id': 1495, 'name': 'fishing'}, {'id': 12392...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31357</td>\n",
+       "      <td>[{'id': 818, 'name': 'based on novel'}, {'id':...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11862</td>\n",
+       "      <td>[{'id': 1009, 'name': 'baby'}, {'id': 1599, 'n...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                                           keywords\n",
+       "0    862  [{'id': 931, 'name': 'jealousy'}, {'id': 4290,...\n",
+       "1   8844  [{'id': 10090, 'name': 'board game'}, {'id': 1...\n",
+       "2  15602  [{'id': 1495, 'name': 'fishing'}, {'id': 12392...\n",
+       "3  31357  [{'id': 818, 'name': 'based on novel'}, {'id':...\n",
+       "4  11862  [{'id': 1009, 'name': 'baby'}, {'id': 1599, 'n..."
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# keywords dataframe\n",
+    "key_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -456,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
