extract director from cast

--- a/Content-Based-Recommenders/Content-Based.ipynb
+++ b/Content-Based-Recommenders/Content-Based.ipynb
@@ -913,6 +913,49 @@
     "#Print the first cast member of the first movie in df\n",
     "df.iloc[0]['crew'][0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      John Lasseter\n",
+       "1       Joe Johnston\n",
+       "2      Howard Deutch\n",
+       "3    Forest Whitaker\n",
+       "4      Charles Shyer\n",
+       "Name: director, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract the director's name. If director is not listed, return NaN\n",
+    "def get_director(x):\n",
+    "    for crew_member in x:\n",
+    "        if crew_member['job'] == 'Director':\n",
+    "            return crew_member['name']\n",
+    "    return np.nan\n",
+    "\n",
+    "# Define the new director feature\n",
+    "df['director'] = df['crew'].apply(get_director)\n",
+    "\n",
+    "# Print the directors of the first five movies\n",
+    "df['director'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
