create fuction to prevent data ambiguity

--- a/Content-Based-Recommenders/Content-Based.ipynb
+++ b/Content-Based-Recommenders/Content-Based.ipynb
@@ -1086,6 +1086,38 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In our current state, our vectorizer will treat two actors with the same first (Ryan Gosling and Ryan Reynolds) name as the same, although they are different.\n",
+    "The last step therefore, is to strip the space between first and last name and convert them to lowercase, so our vectorizer can distinguish the two."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to sanitize data to prevent ambiguity\n",
+    "def sanitize(x):\n",
+    "    if isinstance(x, list):\n",
+    "        # strip spaces and convert to lowercase\n",
+    "        return[str.lower(i.replace(\" \", \"\")) for i in x]\n",
+    "    else:\n",
+    "        # check if director exists. if not, return empty string\n",
+    "        if isinstance(x, str):\n",
+    "            return str.lower(x.replace(\" \", \"\"))\n",
+    "        else:\n",
+    "            return ''\n",
+    "        \n",
+    "# apply the apply the generate_list function to cast, keywords, director and genres\n",
+    "for feature in ['cast', 'director', 'genres', 'keywords']:\n",
+    "    df[feature] = df[feature].apply(sanitize)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
