create metadata soup

--- a/Content-Based-Recommenders/Content-Based.ipynb
+++ b/Content-Based-Recommenders/Content-Based.ipynb
@@ -1118,6 +1118,43 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In our previous content based recommender system, we were working with one feature(overview). In our metadata recommender however, we have 4 features, three being lists and one a string. \n",
+    "We need to create a soup that contains all these features, so we can feed it to our vectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jealousy toy boy tomhanks timallen donrickles johnlasseter animation comedy family'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Function that creates a soup out of the desired metadata\n",
+    "def create_soup(x):\n",
+    "    return ' '.join(x['keywords']) + ' ' + ' '.join(x['cast']) + ' ' + x['director'] + ' ' + ' '.join(x['genres'])\n",
+    "\n",
+    "# Create the soup feature\n",
+    "df['soup'] = df.apply(create_soup, axis=1)\n",
+    "\n",
+    "# Display the soup of the first movie\n",
+    "df.iloc[0]['soup']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
