--- a/Content-Based-Recommenders/Content-Based.ipynb
+++ b/Content-Based-Recommenders/Content-Based.ipynb
@@ -1156,6 +1156,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instead of using TF-IDFVectoriser, we will use CountVectoriser. TF-IDFVectoriser will give less weight to actors and directors who've worked in large movies \n",
+    "# Define CountVectorizer object and create vectors for the soup\n",
+    "# Import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "count = CountVectorizer(stop_words='english')\n",
+    "count_matrix = count.fit_transform(df['soup'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import cosine_similarity function\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "# Compute the cosine similarity score\n",
+    "cosine_sim2 = cosine_similarity(count_matrix, count_matrix)\n",
+    "\n",
+    "# Reset index of your df and construct reverse mapping again\n",
+    "df = df.reset_index()\n",
+    "indices2 = pd.Series(df.index, index=df['title'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                         Toy Story\n",
+       "3024                    Toy Story 2\n",
+       "15519                   Toy Story 3\n",
+       "29198               Superstar Goofy\n",
+       "26001    Toy Story That Time Forgot\n",
+       "                    ...            \n",
+       "46622                    Robin Hood\n",
+       "46624           Century of Birthing\n",
+       "46625                      Betrayal\n",
+       "46626              Satan Triumphant\n",
+       "46627                      Queerama\n",
+       "Name: title, Length: 46628, dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# With the new reverse mapping constructed, and our similarity scores computed, we can reuse the content_recommender function defined previously by passing in cosine_sim2 as an argument\n",
+    "content_recommender('Toy Story', cosine_sim2, df, indices2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
